--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,31 @@
 
-#phonebook
-  form#search
-    input#inputSearch.form-control placeholder=("What are you looking for? ..") style=("width: 74%;") type="search" /
-    input#buttonReset.btn.btn-success disabled="" style=("width: 24%;") type="button" value="Reset" /
-  form#phonebook__form.hide   novalidate="" 
-    #phonebook__form__adder
-   
-      input#inputName.form-control autocomplete="off" placeholder=("Введите имя.") type="text" /
-      input#inputTel.form-control autocomplete="off" disabled="" placeholder=("Введите телефон.") type="tel" /
-      input#inputEmail.form-control autocomplete="off" disabled="" placeholder=("Введите почту.") type="email" 
-      input#buttonAdd.btn.btn-success disabled="" type="button" value=("Добавить контант") /
-      /
-  table#phonebook__result 
-    thead 
-    tbody#tbody
-    button id='btn' Добавить контант
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - A Pen by Fludda</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<div id="phonebook">
+  <form id="search">
+    <input class="form-control" id="inputSearch" placeholder="What are you looking for? .." style="width: 74%;" type="search" /><input class="btn btn-success" disabled="" id="buttonReset" style="width: 24%;" type="button" value="Reset" />
+  </form>
+  <form class="hide" id="phonebook__form" novalidate="">
+    <div id="phonebook__form__adder">
+      <input autocomplete="off" class="form-control" id="inputName" placeholder="Введите имя." type="text" /><input autocomplete="off" class="form-control" disabled="" id="inputTel" placeholder="Введите телефон." type="tel" /><input autocomplete="off" class="form-control" disabled="" id="inputEmail" placeholder="Введите почту." type="email" /><input class="btn btn-success" disabled="" id="buttonAdd" type="button" value="Добавить контант" />
+    </div>
+  </form>
+  <table id="phonebook__result">
+    <thead></thead>
+    <tbody id="tbody"></tbody>
+    <button id="btn">Добавить контант</button>
+  </table>
+</div>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
